--- a/estilo.css
+++ b/estilo.css
@@ -1,95 +1,95 @@
-    .grid-container {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 2fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-        background-color: beige;
-        padding: 10px;
-    }
-    
-    .grid-container>div {
-        padding: 30px 0;
-        grid-gap: 30px
-    }
-    
-    .iniciar {
-        grid-row-start: 1;
-        grid-row-end: 2;
-        grid-column-start: 7;
-        grid-column-start: 8;
-    }
-    
-    .botones {
-        grid-row-start: 1;
-        grid-row-end: 2;
-        grid-column-start: 6;
-        grid-column-end: t;
-    }
-    
-    .imagenes {
-        grid-row-start: 2;
-        grid-row-end: 3;
-        grid-column-start: 3;
-        grid-column-end: 5;
-        display: block;
-        margin: auto;
-    }
-    
-    .imput {
-        grid-row-start: 3;
-        grid-row-end: 4;
-        grid-column-start: 3;
-        grid-column-end: 5;
-    }
-    
-    input {
-        width: 100%;
-        padding: 12px 20px;
-        margin: 8px 0;
-        box-sizing: border-box;
-    }
-    
-    .colombia {
-        grid-column-start: 0;
-        grid-column-end: 1;
-        grid-row-start: 5;
-        grid-row-end: 6;
-    }
-    
-    .publicidad {
-        grid-column-start: 0;
-        grid-column-end: 1;
-        grid-row-start: 6;
-        grid-row-end: 7;
-    }
-    
-    .negocios {
-        grid-column-start: 1;
-        grid-column-start: 2;
-        grid-row-start: 6;
-        grid-row-end: 7;
-    }
-    
-    .suerte {
-        grid-column-start: 3;
-        grid-column-start: 4;
-        grid-row-start: 4;
-        grid-row-end: 5;
-    }
-    
-    .buscar {
-        grid-column-start: 2;
-        grid-column-start: 3;
-        grid-row-start: 4;
-        grid-row-end: 5;
-    }
-    
-    .contenedor {
-        grid-column-start: 3;
-        grid-column-start: 4;
-        grid-row-start: 6;
-        grid-row-end: 7;
-    }
-    
-    .whatsaap.png {
-        float: right
-    }
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    background-color: beige;
+    padding: 10px;
+}
+
+.grid-container>div {
+    padding: 30px 0;
+    grid-gap: 30px
+}
+
+.iniciar {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 7;
+    grid-column-start: 8;
+}
+
+.botones {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 6;
+    grid-column-end: t;
+}
+
+.imagenes {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 5;
+    display: block;
+    margin: auto;
+}
+
+.imput {
+    grid-row-start: 3;
+    grid-row-end: 4;
+    grid-column-start: 3;
+    grid-column-end: 5;
+}
+
+input {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+.colombia {
+    grid-column-start: 0;
+    grid-column-end: 1;
+    grid-row-start: 5;
+    grid-row-end: 6;
+}
+
+.publicidad {
+    grid-column-start: 0;
+    grid-column-end: 1;
+    grid-row-start: 6;
+    grid-row-end: 7;
+}
+
+.negocios {
+    grid-column-start: 1;
+    grid-column-start: 2;
+    grid-row-start: 6;
+    grid-row-end: 7;
+}
+
+.suerte {
+    grid-column-start: 3;
+    grid-column-start: 4;
+    grid-row-start: 4;
+    grid-row-end: 5;
+}
+
+.buscar {
+    grid-column-start: 2;
+    grid-column-start: 3;
+    grid-row-start: 4;
+    grid-row-end: 5;
+}
+
+.contenedor {
+    width: 95%;
+    max-width: 900px;
+    padding: 32px 64px;
+    margin: auto
+}
+
+img {
+    float: right;
+}
